test/driver/c-header-import-not-found.delta
// RUN: %check_errors %not %delta -typecheck %s

// CHECK: [[@LINE+1]]:8: error: couldn't find C header file 'foo.h'
import "foo.h";

void main() {}
